SW-8558 - Fixed sizing issue in ie9 on the fancy boxes - Changed z-index of overlay, loading indicator and modal box so it doesn't interfere with the offcanvas menu

--- a/engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_components/fields.less
+++ b/engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_components/fields.less
@@ -107,7 +107,6 @@ input[type="tel"]{
         .unitize-padding(0, 40, 0, 10);
         border-right: 1px solid #fff;
         font-weight: bold;
-        width: 100%;
 
         // CSS truncating
         white-space: nowrap;
