--- a/engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_components/loading-indicator.less
+++ b/engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_components/loading-indicator.less
@@ -7,7 +7,7 @@
     left: 50%;
     top: 50%;
     border: 1px solid black;
-    z-index: 950;
+    z-index: 9500;
 }
 
 .has--cssanimations {
