--- a/engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_components/modal.less
+++ b/engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_components/modal.less
@@ -15,7 +15,7 @@
     border: 1px solid @darkBorderColor;
     max-height: 100%;
     max-width: 100%;
-    z-index: 1000;
+    z-index: 10000;
 
     .header {
         .unitize-padding(10, 10, 10, 10);
